# SonyHeadphonesClientMacOS

./: .gitignore  CLAUDE.md  CMakeLists.txt  DetectPlatform.cmake  README.md  build_app.sh  build_dmg.sh
.github/workflows/: cmake.yml
MDRProtocol/: Package.resolved  Package.swift
MDRProtocol/Sources/MDRProtocol/: MDRProtocol.swift
MDRProtocol/Sources/MDRProtocol/Base/: BigEndian.swift  DataReader.swift  DataWriter.swift  MDRArray.swift  MDRError.swift  PodArray.swift  PrefixedString.swift  Serializable.swift
MDRProtocol/Sources/MDRProtocol/Enums/: T1Command.swift  T1Enums.swift  T2Command.swift  T2Enums.swift  V2Enums.swift
MDRProtocol/Sources/MDRProtocol/Framing/: Constants.swift  Escape.swift  PackUnpack.swift
MDRProtocol/Sources/MDRProtocol/Handlers/: HandleV2T1.swift  HandleV2T2.swift  RequestCommit.swift  RequestInit.swift  RequestSync.swift
MDRProtocol/Sources/MDRProtocol/Payloads/T1/: T1Alert.swift  T1Audio.swift  T1Common.swift  T1Connect.swift  T1EqEbb.swift  T1GeneralSetting.swift  T1NcAsm.swift  T1Play.swift  T1Power.swift  T1System.swift
MDRProtocol/Sources/MDRProtocol/Payloads/T2/: Connect.swift  Peripheral.swift  SafeListening.swift  VoiceGuidance.swift
MDRProtocol/Sources/MDRProtocol/Platform/: BluetoothTransport.swift  MDRConnectionTransport.swift
MDRProtocol/Sources/MDRProtocol/StateMachine/: MDREvent.swift  MDRHeadphones.swift  MDRProperty.swift  MDRTransport.swift  ReconnectStateMachine.swift
MDRProtocol/Tests/MDRProtocolTests/: BaseTypeTests.swift  CommandQueueTests.swift  EnumTests.swift  FramingTests.swift  HandlerTests.swift  IntegrationTests.swift  PlatformTests.swift  PropertyRegressionTests.swift  ReconnectStateMachineTests.swift  SerializationT1Tests.swift  SerializationT2Tests.swift  StateMachineTests.swift
client/: CMakeLists.txt  Client.cpp  SDLMain.cpp
client-swift/SonyHeadphonesClient.xcodeproj/: project.pbxproj
client-swift/SonyHeadphonesClient/App/: ContentView.swift  SonyHeadphonesClientApp.swift
client-swift/SonyHeadphonesClient/Bridge/: SonyHeadphonesClient-Bridging-Header.h
client-swift/SonyHeadphonesClient/Models/: DeviceState.swift  HeadphonesManager.swift  HeadphonesSnapshot.swift  MDREnums.swift  NowPlayingService.swift
client-swift/SonyHeadphonesClient/Resources/: AppIcon.icns  Info.plist  SoundPilot.entitlements
client-swift/SonyHeadphonesClient/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
client-swift/SonyHeadphonesClient/Views/Connected/: AboutTab.swift  ConnectedView.swift  DevicesTab.swift  HeaderView.swift  PlaybackTab.swift  SoundTab.swift  SystemTab.swift
client-swift/SonyHeadphonesClient/Views/Connecting/: ConnectingView.swift
client-swift/SonyHeadphonesClient/Views/Disconnected/: DisconnectedView.swift
client-swift/SonyHeadphonesClient/Views/Discovery/: DiscoveryView.swift
client-swift/SonyHeadphonesClient/Views/MenuBar/: MenuBarPopoverView.swift
client-swift/SonyHeadphonesClient/Views/Reconnecting/: ReconnectingView.swift
client/Platform/: CMakeLists.txt
client/Platform/MacOS/: CMakeLists.txt  Info.plist  PlatformMacOS.cpp
contrib/: CMakeLists.txt
libmdr/include/mdr/: Headphones.hpp
libmdr/include/mdr-c/: HeadphonesAccess.h
libmdr/include/mdr-c/Platform/: PlatformMacOS.h
libmdr/src/: HeadphonesAccess.cpp  HeadphonesV2.cpp
libmdr/src/Platform/: CMakeLists.txt
libmdr/src/Platform/MacOS/: CMakeLists.txt  PlatformMacOS.mm
tooling/: CMakeLists.txt  README.md
